<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Text</string>
    <string name="action_settings">Settings</string>
    <string name="quick_message_header">Quick messages</string>
    <string name="coffee_button_text">Let\'s get coffee</string>
    <string name="fiddle_button_text">Quit fiddling with your phone</string>
    <string name="title_activity_options">Options</string>
    <string name="milk_button_text">Please pick up a gallon of milk</string>
    <string name="smokes_button_text">I need a pack of cigs</string>
    <string name="leaving_button_text">Leaving work now, see you soon!</string>

</resources>
