<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp" >

            <TextView
                android:id="@+id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quick_message_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="preferences icon"
                android:drawableLeft="@android:drawable/ic_menu_preferences"
                android:onClick="updatePreferences"
                android:text="settings" />
        </LinearLayout>

        <Button
            android:id="@+id/coffee"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/coffee_button_text" />

        <Button
            android:id="@+id/fiddle"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/fiddle_button_text"
            android:visibility="gone" />

        <Button
            android:id="@+id/milk"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/milk_button_text"
             />

        <Button
            android:id="@+id/smokes"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/smokes_button_text"
           />

        <Button
            android:id="@+id/leaving"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/leaving_button_text"
       />
        <Button
            android:id="@+id/custom"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text=""
            android:visibility="gone"
       />
        </LinearLayout>

</ScrollView>